--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "license": "GPL",
     "authors": [
     {
-        "name": "Brennen Bearnes",
-        "email": "brennen@sparkfun.com"
+        "name": "SparkFun Electronics",
+        "email": "it@sparkfun.com"
     }
     ],
     "require": {
-      "php": ">=5.5.17"
+      "php": ">=5.6.36"
     },
     "autoload": {
       "psr-0" : {
